@@ -115,6 +115,7 @@
 73. Add SoundCloud to online services.
 74. Drop usage of lame when playing back AudioCDs, its not required.
 75. Always use QNetworkAccessManager - as KIO is not thread safe :-(
+76. Update copy of Solid to KDE4.10.5.
 
 1.0.3
 -----
